solved color functionality and bugs in text align

--- a/src/assets/scss/editor/main.scss
+++ b/src/assets/scss/editor/main.scss
@@ -5,6 +5,7 @@
   padding: 20px 25px;
   background-color: #FFF;
   border-radius: 5px;
+  box-shadow: 0 0 7px #ccc;
 
   &-menu {
     display: flex;
